syntax = "proto3";

package com.bknprocessing.common.protoClasses;

message NodeInit {
  bool isHealthy = 1;
  uint32 totalNodesCount = 2;
  uint32 nodeIndex = 3;
  uint64 createdAt = 4;
}