syntax = "proto3";

package com.bknprocessing.common.protoService;

import "com/bknprocessing/common/proto/Block.proto";
import "com/bknprocessing/common/proto/StateChange.proto";
import "com/bknprocessing/common/proto/Transaction.proto";
import "com/bknprocessing/common/proto/Verification.proto";
import "com/bknprocessing/common/proto/VerificationResult.proto";
import "com/bknprocessing/common/proto/NodeInit.proto";
import "google/protobuf/wrappers.proto";

service RpcService {
  rpc initNode(com.bknprocessing.common.protoClasses.NodeInit) returns (google.protobuf.StringValue);
  rpc verifyObj(com.bknprocessing.common.protoClasses.Transaction);
  rpc verify(com.bknprocessing.common.protoClasses.Verification);
  rpc verifyResult(com.bknprocessing.common.protoClasses.VerificationResult);
  rpc stateChange(com.bknprocessing.common.protoClasses.StateChange);
}